<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">RosKasa</string>
    <string name="title_login">Prijava v aplikacijo</string>
    <string name="title_mize">Mize in rajoni</string>
    <string name="title_narocila">Naročila</string>
    <string name="title_racuni">Računi</string>
    <string name="title_placila">Plačila</string>

    <!-- POS Krmilne tipke -->
    <string name="btn_mize">Mize</string>
    <string name="btn_racuni">Računi</string>
    <string name="btn_naroci">Naroči</string>
    <string name="btn_placila">Plačila</string>
    <string name="btn_odjava">Odjava</string>
    <string name="btn_brisanje">Brisanje</string>
    <string name="btn_cenik_tipke">Cenik/Tipke</string>
    <string name="btn_hodi">Hod-i</string>
    <string name="btn_preklopi_cenik">Preklopi Cenik</string>
    <string name="btn_popust">Popust</string>
    <string name="btn_izpisani_racuni">Izpisani Računi</string>
    <string name="btn_odprti_racuni">Odprti Računi</string>
    <string name="btn_toggle_status_izpisani">Izpisani (STATUS=2)</string>
    <string name="btn_toggle_status_odprti">Odprti (STATUS=1)</string>
    <string name="preview_racun_title">PREDOGLED RAČUNA #%d</string>
    <string name="preview_loading_data">Nalaganje podatkov računa s strežnika&#8230;</string>
    <string name="preview_error_load">Računa ni bilo mogoče naložiti s strežnika.</string>
    <string name="preview_error_read">Napaka pri branju računa: %1$s</string>
    <string name="btn_storno">Storno</string>
    <string name="btn_izpis_racuna">Izpis Računa</string>
    <string name="btn_test_tiskanja">Test tiskanja</string>
    <string name="btn_nazaj">Nazaj</string>
    <string name="btn_potrdi">Potrdi</string>

    <!-- Polja za prvi zagon -->
    <string name="lbl_url">Strežnik URL:</string>
    <string name="hint_server_url">https://web.ros.si/ora/r16f/asmx/kasa.asmx</string>
    <string name="lbl_mobile_id">Mobile ID:</string>
    <string name="lbl_username">Uporabniško ime:</string>
    <string name="lbl_password">Geslo:</string>
    <string name="lbl_pin">Vnesite PIN kodo ali približajte NFC kartico:</string>
</resources>
